Closed Bug 648843 Opened 13 years ago Closed 13 years ago

TI: Assertion failure: Call site vanished., at ./methodjit/Retcon.cpp:112

Categories

(Core :: JavaScript Engine, defect)

x86_64
Linux
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: decoder, Unassigned)

References

Details

(Keywords: assertion, testcase)

The following testcase asserts on TI revision d3215d1e985a (run with -m -n -a),
tested on 64 bit:

var HOTLOOP = 100; // works, 10 isnt enough though
function jit(on)
{
  options().match
}
function options() { return "tracejit,methodjit"; }
gczeal(2);
for (i = 0; i < HOTLOOP ; ++i) { jit(jit(42, [])); }
We weren't always emitting the necessary rejoin sites in call paths, so that if we invoked a call IC from within an inlined frame which triggered a recompilation, we couldn't rejoin.  This coalesces things so that the rejoin sites are always generated in the same way and place for calls.

http://hg.mozilla.org/projects/jaegermonkey/rev/74a8fb1bbec5
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
A testcase for this bug was automatically identified at js/src/jit-test/tests/jaeger/recompile/bug648843.js.
Flags: in-testsuite+
You need to log in before you can comment on or make changes to this bug.