[INFER] Coalesce rejoin sites for call ops, bug 648843.